# vallista-land

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc  CLAUDE.md  PROJECT_GUIDE.md  README.md  REFACTORING_GUIDE.md  content-index.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robots.txt  rss.xml  test.ts
.github/workflows/: node.js.yml
.playwright-mcp/: page-2026-04-21T16-07-46-118Z.yml  page-2026-04-21T16-08-13-228Z.yml  page-2026-04-21T16-12-53-562Z.yml  page-2026-04-21T16-15-36-534Z.yml  page-2026-04-21T16-16-11-016Z.yml  page-2026-04-21T16-16-33-899Z.yml  page-2026-04-21T16-16-40-203Z.yml  page-2026-04-21T16-16-46-331Z.yml  page-2026-04-21T16-17-04-956Z.yml
apps/admin/: .env.example  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/admin/electron/: main.ts  preload.ts  tsconfig.json
apps/admin/scripts/: build-icon.sh  migrate-existing-content.mjs
apps/admin/src/: App.tsx  main.tsx
apps/admin/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
apps/admin/src-tauri/capabilities/: default.json
apps/admin/src-tauri/icons/: icon.icns
apps/admin/src-tauri/src/: lib.rs  main.rs  repo.rs
apps/admin/src-tauri/src/commands/: blocks.rs  docs.rs  git.rs  glean.rs  insights.rs  keychain.rs  llm.rs  macos_cal.rs  meta.rs  mod.rs  mood.rs  reports.rs  rss.rs  summaries.rs  tasks.rs
apps/blog/: .env.example  astro.config.mjs  package.json  tsconfig.json
apps/blog/configs/: resume.json
apps/blog/public/: CNAME  robots.txt
apps/blog/scripts/: cache-remote-images.mjs  copy-article-assets.mjs  deploy.mjs  regenerate-placeholders.mjs  (+1 more)
assets/: design-system-B1ame5jL.js  index-C4TQwwzK.css  index-DD7WgHF9.js
contents/articles/: BNF-Backus-Naur-Form.md  COPY와-Command를-이용한-Excel-Export.md  CORS-Cross-Origin-Resource-Sharing.md  CSSOM-CSS-Object-Model.md  Call-By-Value-Call-By-Reference.md  DOM-Document-Object-Model.md  Docker-In-Docker-DIND-설정하기.md  E2E-end-to-end-Test.md  HTTP-프로토콜에서-HTTPS-URI-가져오기.md  Jenkins.md  Jest-enzyme를-활용한-테스팅-환경.md  Next에서-Alias-적용하기.md  RESTFUL-API.md  Redux.md  SEO-Search-Engine-Optimization.md  SPA-Single-Page-Application.md  SSR-Server-Side-Rendering.md  Virtual-DOM.md  Vue-Event-Bus.md  Vue-LifeCycle.md  XSS-Cross-Site-Scripting.md  객체지향-프로그래밍.md  동시성과-병렬성-Concurrency-Parallelism.md  동일-출처-정책-Same-Origin-Policy.md  렌더-트리-생성.md  리듀스-Reduce.md  반응형-웹-적응형-웹.md  백앤드에서-받은-데이터를-어떻게-하면-가공없이-클라이언트에-적용할-수-있을까.md  브라우저-렌더링-과정.md  이벤트-루프-Event-Loop.md  이벤트-버블링-캡쳐링-위임.md  이직을-준비하면서.md  제너레이터-Generator.md  클로저-Closure.md  테스트의-종류.md  파싱-Parsing.md  호이스팅-실행-컨텍스트.md
designs/handoff/: CLAUDE.md  Design System Proposal.html
designs/handoff_about/: README.md
docs/admin/: PROPOSAL.md
services/blog/: .gitignore  .viterc  eslint.config.js  gatsby-browser.js  gatsby-browser.tsx  gatsby-config.js  gatsby-shared.jsx  gatsby-ssr.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.script.json  vite.config.dev.ts  vite.config.ssr.ts  vite.config.ts
services/design-system-test/: package.json
services/new-blog/: .prettierrc.json  ARCHITECTURE.md  README.md  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
services/playground/: gatsby-browser.js  gatsby-config.js  gatsby-node.js  package.json
services/vite-blog/: .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+1355 files in other folders)
