[package]
name = "bento"
version = "0.0.1"
description = "Bento — vallista's personal daily companion"
authors = ["vallista"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bento_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
gray_matter = "0.2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
scraper = "0.20"
ego-tree = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
