[package]
name = "bento"
version = "0.0.1"
description = "Bento — vallista's personal daily companion"
authors = ["vallista"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bento_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
gray_matter = "0.2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
scraper = "0.20"
ego-tree = "0.6"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
feed-rs = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
chrono = "0.4"
chrono-tz = "0.10"
sha2 = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
security-framework = "2"
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDate", "NSString", "NSPredicate", "NSEnumerator"] }
objc2-event-kit = { version = "0.3", features = ["EKTypes", "EKEventStore", "EKEvent", "EKCalendar", "EKObject", "EKCalendarItem", "block2"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
